product/standard/kube-prometheus-pro/kube-prometheus-pro-0.3.0/manifests/custom_by_hepy/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: monitor-kubernetes.inc-inc.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
